--- a/index.html
+++ b/index.html
@@ -21,12 +21,22 @@
             <input type="number" id="alkalinitasTarget" placeholder="Masukkan alkalinitas target">
         </div>
 
+        <div class="form-group">
+            <label for="volumeAir">Volume Air (Liter):</label>
+            <input type="number" id="volumeAir" placeholder="Masukkan volume air dalam liter">
+        </div>
+
         <button id="calculateButton">Hitung</button>
 
         <div id="result" class="result"></div>
 
-        <p class="note">Hasil perhitungan berdasarkan data sebanyak 59 data. Jika terdapat perbedaan dilapangan, silakan hubungi personel MRC agar dapat dioptimasi kembali.</p>
-        <p class="note">Indeks koreksi saat ini adalah 8%.</p>
+        <div class="notes">
+            <ul>
+                <li>Perhitungan ini berdasarkan data sebanyak <strong>59 data</strong>.</li>
+                <li>Indeks koreksinya saat ini adalah <strong>8%</strong>.</li>
+                <li>Apabila terdapat perbedaan di lapangan, silakan hubungi Personel MRC agar dapat dioptimasi kembali.</li>
+            </ul>
+        </div>
     </div>
 
     <script src="script.js"></script>
